listo para agregar web storage

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="contenedor-principal">
+        <h1>Lista de Tareas</h1>
         <div class= "formulario">
-            <form action="">
+            <form id = "formTarea" action="">
                 <input type="text" id="tareaInput" placeholder="Agrega una tarea">
                 <input type="button" id ="btn-agregar" value="Agregar">
             </form>
