--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="contenedor-principal">
         <h1>Lista de Tareas</h1>
         <div class= "formulario">
-            <form id = "formTarea" action="">
+            <form id = "formTarea" action="" autocomplete="off">
                 <input type="text" id="tareaInput" placeholder="Agrega una tarea">
                 <input type="button" id ="btn-agregar" value="Agregar">
             </form>
